--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
   "name": "path-visualizer",
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "description": "<h1>Path Visualizer</h1>\r <p>A visual implementation of various algorithms to find the best path between two points in a grid</p>\r <p>The algorithms include:</p>\r <ul>\r   <li>Dijkstra</li>\r   <li>A* Search</li>\r   <li>Breadth First Search</li>\r   <li>Depth First Search</li>\r </ul>\r <br />\r <br />\r <img src=\"https://i.imgur.com/wh6P57K.jpg\"/>\r <h3>Powered by:</h3>\r <br />\r <img src=\"https://i.imgur.com/nHTYs1P.jpg\"/>",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
